# python-template

./: .pre-commit-config.yaml  pylama.ini  pyproject.toml
