[tool.poetry]
name = "event-tracker"
version = "0.1.0"
description = ""
authors = ["Richard Hanson"]

[tool.poetry.dependencies]
python = "^3.7"
kivy = "^1.11.1"
ffpyplayer = "^4.3.0"
pre-commit = "^1.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
